# xenohammer

./: -  .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  agents.md
.github/skills/deep-compare/: SKILL.md
assets/: manifest.json
assets/fonts/: font.tga
assets/icon-pack/: README.txt  site.webmanifest
classic/: README.md
classic/src/clanlib_shim/ClanLib/: display.h  gl.h  gui.h  sound.h  ttf.h  vorbis.h
classic/src/game/: Boss.cpp  Boss.h  CapitalShip.cpp  CapitalShip.h  Console.h  Display.h  EnemyShip.h  FighterBAI.cpp  FrigateAI.h  GL_Handler.cpp  GL_Handler.h  GUI.cpp  GUI.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GenericAI.h  GunshipAI.h  Homing.h  LightFighterAI.h  PlayerShip.cpp  Ship.cpp  Ship.h  ShipComponent.cpp  ShipComponent.h  Sound.h  StarField.h  caimagemanipulation.cpp  caimagemanipulation.h  collision.h  pcxload.cpp  pcxload.h  powerup.h  spaceObject.h  wave.h  weapon.h
game/: README.md  SPEC.md
game/assets/icon-pack/: site.webmanifest
game/classic/: AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
game/classic/assets/: BigExp00.pcx  BigExp01.pcx  BigExp02.pcx  BigExp03.pcx  BigExp04.pcx  BigExp05.pcx  BigExp06.pcx  BigExp07.pcx  BigExp08.pcx  BigExp09.pcx  BigExp10.pcx  BigExp11.pcx  BigExp12.pcx  BigExp13.pcx  BigExp14.pcx  BigExp15.pcx  BossDownPlatform.pcx  BossLeftPlatform.pcx  BossLeftU.pcx  BossNode1.pcx  BossNode1Destroyed.pcx  BossNode2.pcx  BossRightPlatform.pcx  BossRightU.pcx  CapShipBody.pcx  CapShipLt.pcx  CapShipLtDest.pcx  CapShipNose.pcx  CapShipNoseDest.pcx  CapShipRt.pcx  CapShipRtDest.pcx  ConnectorH.pcx  ConnectorUL.pcx  ConnectorUR.pcx  FighterB00.pcx  FighterB01.pcx  FighterB02.pcx  FighterB03.pcx  FighterB04.pcx  FighterB05.pcx  (+256 more)
game/classic/assets/resources/: background.tga  button1.tga  button2.tga  button3.tga  button4.tga
game/classic/assets/resources/menu/: checked.tga  new.tga  open.tga  save.tga  submenu.tga  unchecked.tga
game/classic/assets/resources/scrollbar/: hor_decrease.tga  hor_increase.tga  ver_decrease.tga  ver_increase.tga
game/classic/src/clanlib_shim/: clanlib_shim_impl.cpp
game/classic/src/clanlib_shim/ClanLib/: application.h  display.h  gl.h  input.h  resources.h  sound.h  system.h
game/classic/src/clanlib_shim/ClanLib/Core/System/: mutex.h
game/classic/src/clanlib_shim/impl/: clanlib_shim_impl.cpp
game/classic/src/compat/: GameManager_proxy.cpp  iomanip.h
game/classic/src/compat/ClanLib/Core/System/: mutex.h
game/classic/src/compat/clanlib_shim/: asset_pack.cpp  asset_pack.h  clanlib_shim_impl.cpp
game/classic/src/compat/clanlib_shim/ClanLib/: core.h  gl.h  gui.h  input.h  system.h
game/classic/src/compat/clanlib_shim/ClanLib/Core/System/: mutex.h
game/classic/src/compat/game/: Homing_proxy.cpp
game/classic/src/compat/gl/: glaux.h
game/classic/src/compat/io/: fstream.h  iostream.h
game/classic/src/game/: CapitalShip_Frigate.h  CollsionDetection.cpp  Display.h  FighterBAI.h  Frigate.cpp  FrigateAI.cpp  GL_Handler.cpp  GL_Handler.h  GUI.h  GameAnimation.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  GenericAI.cpp  GenericAI.h  GunshipAI.cpp  GunshipAI.h  Homing.cpp  Homing.h  LightFighterAI.cpp  LightFighterAI.h  PlayerShip.cpp  PlayerShip.h  PowerPlant.h  Ship.h  Sound.cpp  StarField.cpp  TParticleClass.cpp  TParticleClass.h  TurretAI.cpp  TurretAI.h  collision.h  explosion.h  explosionGenerator.cpp  explosionGenerator.h  pcxload.cpp  projectile.cpp  projectile.h  rankings.h  (+2 more)
game/web/: .gitignore  AGENTS.md  README.md  capture-hero.mjs  index.html  tsconfig.json  vite.config.ts
game/web/assets/: game-constants.json  manifest.json
game/web/assets/icon-pack/: head-snippet.html  head.html  site.webmanifest
game/web/assets/reference_screenshots/: README.md
game/web/debug_screenshots/: console_log.txt
game/web/src/: main.ts
game/web/src/data/: ships.ts
game/web/src/engine/: AssetLoader.ts  Audio.ts  TouchControls.ts  index.ts
game/web/src/game/: AI.ts  Boss.ts  CapitalShip.ts  ChainLightning.ts  Explosion.ts  GameManager.ts  HUD.ts  Player.ts  PowerPlant.ts  Projectile.ts  Screens.ts  Wave.ts  Weapon.ts  maskUtil.ts
game/web/tools/: capture-hero.mjs  debug.mjs
site/: AGENTS.md  README.md  hero-gameplay.webm  index.html  robots.txt  sitemap.xml
site/archives/: index.html  museum.css
site/archives/museum/: clanlib_news.html  gamedev_forum.html  gamedev_showcase.html  gdc2002.html  gt_whistle.html  iat410.html  igf_2002.html  team.html  tripod_home.html
site/archives/raw/: sources.md
site/archives/raw/tripod/: docsandpresentations.htm  index.html  resume_general.doc  screen_1.htm  screen_2.htm  screenshots.htm  team.htm  tips_and_hints.htm
site/archives/raw/tripod/docs/: Interim presentation.ppt  Interim_Presentation.ppt  Part2 - Iterm Report.doc  Preliminary Game Design.doc  Resume(Brian Smith)Xeno.doc  chris-resume.doc  jason_resume_general.doc  part3- progress report.doc
site/play/: index.html
site/play/assets/: index-DiPcjVaw.js  index-NT5sMBBO.js
tools/: archive_tripod.py  convert_assets.py  deploy_azure.ps1  package_site.ps1  package_site.py
tribute/: index.html
tribute/archives/: index.html
tribute/archives/museum/: gamedev_showcase.html  gt_whistle.html  iat410.html  tripod_home.html
tribute/archives/raw/: sources.md
tribute/archives/raw/tripod/: screen_3.htm
tribute/archives/raw/tripod/docs/: Part3_Progress_Report.doc
web/: debug.mjs  index.html  package-lock.json  package.json  vite.config.ts
web/debug_screenshots/: console_log.txt
web/docs/: fidelity-audit.md
web/public/: audiotest.html
web/public/assets/: manifest.json
web/public/assets/icon-pack/: head.html
web/src/: main.ts
web/src/data/: levels.ts  ships.ts
web/src/engine/: AssetLoader.ts  Audio.ts  Canvas.ts  Input.ts  Particles.ts  Sprite.ts  TouchControls.ts  index.ts
web/src/game/: AI.ts  Boss.ts  CapitalShip.ts  Collision.ts  Enemy.ts  Explosion.ts  GameManager.ts  HUD.ts  Player.ts  PowerPlant.ts  PowerUp.ts  Projectile.ts  Screens.ts  StarField.ts  Wave.ts  Weapon.ts  maskUtil.ts
